# simple-docker-calculator

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml  code_check.yml  docker_build.yml  main.yml  main_pipeline.yml  test.yml
compiler/src/: compile.sh
src/: main.py  start.sh
src/gui/: calculator_gui.py
src/simple_docker_calculator/gui/: calculator_gui.py
src/simple_docker_calculator/logic/: math.py
test/: requirements.txt  test_math.py
