[project]
name = "simple_docker_calculator"
version = "0.1.0"
description = "A simple dockerized calculator"
authors = [{ name="Pierpasquale Colagrande", email="pierpasquale.colagrande@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10.12"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"